--- a/AutoLayout-Practice/Base.lproj/Main.storyboard
+++ b/AutoLayout-Practice/Base.lproj/Main.storyboard
@@ -1,25 +1,144 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5023" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="poO-pg-Khz">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <!--Navigation Controller-->
+        <scene sceneID="Xxq-J7-l4c">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                <navigationController definesPresentationContext="YES" id="poO-pg-Khz" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BNa-5K-Qoe">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="u2E-cZ-Wzy" kind="relationship" relationship="rootViewController" id="t38-hc-yzf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qKa-NQ-TrY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="OdO-HT-zsj">
+            <objects>
+                <viewController id="u2E-cZ-Wzy" customClass="ViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="22" sectionFooterHeight="22" id="Fhh-QX-HSE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="55" id="BTu-Mr-AlB" customClass="CustomCell">
+                                <rect key="frame" x="0.0" y="86" width="320" height="55"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BTu-Mr-AlB" id="c92-oX-1pl">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m3o-zP-xy9" customClass="SampleView">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        </view>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="wsf-xS-TaW">
+                                            <rect key="frame" x="10" y="16" width="300" height="22"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="wsf-xS-TaW" secondAttribute="trailing" constant="10" id="MWI-TR-4iH"/>
+                                        <constraint firstAttribute="trailing" secondItem="m3o-zP-xy9" secondAttribute="trailing" id="Pi9-1i-huk"/>
+                                        <constraint firstItem="m3o-zP-xy9" firstAttribute="leading" secondItem="c92-oX-1pl" secondAttribute="leading" id="Uat-Pn-sEI"/>
+                                        <constraint firstItem="m3o-zP-xy9" firstAttribute="top" secondItem="c92-oX-1pl" secondAttribute="top" id="f5q-m0-Cg3"/>
+                                        <constraint firstItem="wsf-xS-TaW" firstAttribute="leading" secondItem="c92-oX-1pl" secondAttribute="leading" constant="10" id="oPM-mp-95K"/>
+                                        <constraint firstAttribute="bottom" secondItem="wsf-xS-TaW" secondAttribute="bottom" constant="16" id="rKy-l2-f10"/>
+                                        <constraint firstItem="wsf-xS-TaW" firstAttribute="top" secondItem="c92-oX-1pl" secondAttribute="top" constant="16" id="xKN-cz-7IM"/>
+                                        <constraint firstAttribute="bottom" secondItem="m3o-zP-xy9" secondAttribute="bottom" id="yEm-D8-bv4"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="mainLabel" destination="wsf-xS-TaW" id="rZI-oA-Kgv"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="cxY-kD-crx"/>
+                    <connections>
+                        <outlet property="tableView" destination="Fhh-QX-HSE" id="cPN-93-sdk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UeS-cC-i8n" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="613" y="43"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="jw3-HX-BBK">
+            <objects>
+                <viewController id="Bbt-PS-JLB" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                        <viewControllerLayoutGuide type="top" id="ZfV-GJ-fuY"/>
+                        <viewControllerLayoutGuide type="bottom" id="DaP-ub-J7n"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                    <view key="view" contentMode="scaleToFill" id="bgY-W2-9Qn">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3gS-RN-J9e">
+                                <rect key="frame" x="10" y="76" width="300" height="321"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="0.563825982" blue="0.47470823909999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p2g-Ja-3rT">
+                                <rect key="frame" x="165" y="407" width="145" height="151"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.43681785699999998" green="0.83631963320000002" blue="0.4025085222" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="00u-k1-V15">
+                                <rect key="frame" x="10" y="407" width="145" height="151"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.58486010450000003" green="0.62081645959999998" blue="0.83631963320000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="151" id="lw4-HY-DLa"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DaP-ub-J7n" firstAttribute="top" secondItem="00u-k1-V15" secondAttribute="bottom" constant="10" id="0zu-Ct-b62"/>
+                            <constraint firstItem="00u-k1-V15" firstAttribute="centerY" secondItem="p2g-Ja-3rT" secondAttribute="centerY" id="59M-tm-Tm1"/>
+                            <constraint firstItem="p2g-Ja-3rT" firstAttribute="trailing" secondItem="3gS-RN-J9e" secondAttribute="trailing" id="5zt-dk-aAi"/>
+                            <constraint firstItem="00u-k1-V15" firstAttribute="width" secondItem="p2g-Ja-3rT" secondAttribute="width" id="8lK-RS-gkz"/>
+                            <constraint firstItem="p2g-Ja-3rT" firstAttribute="top" secondItem="3gS-RN-J9e" secondAttribute="bottom" constant="10" id="MUE-d8-CLH"/>
+                            <constraint firstItem="00u-k1-V15" firstAttribute="bottom" secondItem="p2g-Ja-3rT" secondAttribute="bottom" id="PNy-JF-ElK"/>
+                            <constraint firstItem="00u-k1-V15" firstAttribute="leading" secondItem="bgY-W2-9Qn" secondAttribute="leading" constant="10" id="Pa4-A9-EeX"/>
+                            <constraint firstItem="3gS-RN-J9e" firstAttribute="leading" secondItem="00u-k1-V15" secondAttribute="leading" id="k7o-Yc-x4B"/>
+                            <constraint firstItem="p2g-Ja-3rT" firstAttribute="leading" secondItem="00u-k1-V15" secondAttribute="trailing" constant="10" id="mFf-bc-mx3"/>
+                            <constraint firstAttribute="trailing" secondItem="p2g-Ja-3rT" secondAttribute="trailing" constant="10" id="mZb-Mk-Sjf"/>
+                            <constraint firstItem="3gS-RN-J9e" firstAttribute="top" secondItem="bgY-W2-9Qn" secondAttribute="top" constant="76" id="zCk-OM-ZMF"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="vdx-SG-eWy"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RvF-u6-kJT" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="613" y="721"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sav-U5-g3s">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="MCg-Cf-JHw" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vWq-PR-4X3">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Bbt-PS-JLB" kind="relationship" relationship="rootViewController" id="040-z6-A2E"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4hf-Dv-4WT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="138" y="711"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
